@@ -1,0 +1,13 @@
+<?php
+// PHP comment here
+
+/*
+    * Another PHP comment
+     */
+
+echo        php_strip_whitespace(__FILE__);
+// Newlines are considered whitespace, and are removed too:
+function do_nothing() {
+};
+do_nothing();
+?>
