@@ -1,0 +1,5 @@
+// this comment will not be removed
+<?php
+// this comment will be removed
+var_dump(php_strip_whitespace(__FILE__));
+?>
